# demo-rust-rocket-auth0

./: .env.example  Cargo.toml  README.md  Rocket.toml
src/: auth.rs.todo  main.rs  main.todo
src/auth0/api/: config.rs  mod.rs
src/auth0/api/endpoints/: authorize.rs  jwks.rs  mod.rs  oauth_token.rs
src/auth0/api/entities/: mod.rs  token_request.rs  token_response.rs
src/util/: cookies.rs  mod.rs  nonce.rs
